...
                    SessionsManager.saveEntry(context, dbManager, settingsManager, DateUtils.Companion.getdateFormatted(new Date()));
                    break;
                // Clicked on the 'Stop Session' button
                case WIDGET_BUTTON_STOP:
                    dbManager.endSession(dbManager.getLastRunningEntry().getId());
                    break;
                // Clicked on the 'Start break' button
                case WIDGET_BUTTON_START_BREAK:
                    dbManager.createNewPause(dbManager.getLastRunningEntry().getId(), DateUtils.Companion.getdateFormatted(new Date()), "NOT SET YET", 1);
                    // Cancel alarm until breaks are set as finished.
                    // Only then set a new alarm date
                    Log.d(TAG, "Cancelling alarm for entry: " + dbManager.getLastRunningEntry().getId());
                    SessionsAlarmsManager.cancelAlarm(context, dbManager.getLastRunningEntry().getId());
                    SessionsAlarmsManager.setBreakAlarm(context, DateUtils.Companion.getdateFormatted(new Date()), dbManager.getLastRunningEntry().getId());
                    break;
                // Clicked on the 'Stop break' button
                case WIDGET_BUTTON_STOP_BREAK:
                    long lastRunningSessionId = dbManager.getLastRunningEntry().getId();
                    dbManager.endPause(lastRunningSessionId);
                    // Cancel the break notification if it is set as finished.
                    Intent intent4 = new Intent(context, NotificationSenderBreaksBroadcastReceiver.class).putExtra("action", 1);
                    PendingIntent pendingIntent = PendingIntent.getBroadcast(context, (int)lastRunningSessionId, intent4, PendingIntent.FLAG_MUTABLE);
...
