...
    <string name="session_finished">Session is finished!</string>
    <string name="error_bad_id_entry_details">Error: Bad id: </string>
    <string name="notif_get_it_off_title">Reminder:</string>
    <string name="notif_get_it_off_body">You can take your protection off!</string>
    <string name="licenses">Licenses</string>
    <string name="set_auto_date_and_time">Auto fill date and time</string>
    <string name="to">To:</string>
    <string name="from">Since:</string>
    <string name="you_weared_your_protection_from">You wore your protection since:</string>
    <string name="that_make_about">That makes about:</string>
    <string name="worn_for">Worn for:</string>
    <string name="alertdialog_dangerous_wearing_time">Are you sure?</string>
    <string name="alertdialog_dangerous_wearing_body">Not wearing your protection enough can make you fertile again. Wearing it too often is not good either. If in doubt, have a spermogram and go see your doctor.</string>
    <string name="wering_time">Wearing time</string>
    <string name="settings_send_notif_when_done_wearing">Send a notification when you can take off your protection</string>
    <string name="settings_around">Around,&#160;</string>
    <string name="settings_actually_value">Current, %s</string>
...
    <string name="already_running_pause">It seems there already is a running pause.</string>
    <string name="ui_action_on_plus_button_title">Action during click on (+) button in homepage</string>
    <string name="settings_ui_action_on_plus_button_default">(Default)\nPress -> quick running session \nLong press -> advanced session ui</string>
    <string name="settings_ui_action_on_plus_button_long_click">Press -> advanced session ui \nlong press -> quick running session</string>
    <string name="when_get_it_off_negative">(about -%dh%02dm ago)</string>
    <string name="removed_during">Removed during:</string>
    <string name="last_day_string_header">In last 24h, you wore it during:</string>
    <string name="create_new_entry">New entry</string>
    <string name="time_remaining">Time remaining:</string>
    <string name="no_running_session">No running session</string>
    <string name="you_can_get_it_on_again">"You should get it on at: "</string>
    <string name="action_calculators">Calculators</string>
    <string name="calculators_title">Calculators</string>
    <string name="number_of_spermato_per_ml">Number of spermatozoa / ml:</string>
...
    <string name="bad_import_date_pause_xml">A malformed date for a break has been found in the save. It will not be imported</string>
	<string name="action_my_spermograms">My spermograms</string>
    <string name="action_sort_datas">Sort datas</string>
	<string name="my_spermo_title_fragment">My spermograms</string>
    <string name="added_the">Added the:&#160;</string>
	<string name="widget_stop_break">Stop break</string>
    <string name="widget_start_break">Start break</string>
    <string name="save_this_entry">Save this entry</string>
	<string name="history">History</string>
    <string name="action_search_datas">Search entry</string>
    <string name="search_result">Results</string>
	<string name="total_search">Total results:</string>
	<string name="action_edit_spermo">Edit this spermogram</string>
	<string name="alertdialog_edit_spermo_title">Please enter the new date</string>
	<string name="since_midnight_worn_for">Since midnight, worn for:</string>
    <string name="entries">entries</string>
    <string name="see_full_history">See full history</string>
    <string name="no_active_session">No active session</string>
    <string name="see_current_session">See my session</string>
    <string name="history_colon">History:</string>
    <string name="time_worn_appr">Time worn approximately:\n%d weeks\n%d days\n%d hours\n%d minutes\n</string>
    <string name="today">Today:</string>
    <string name="at">"At "</string>
	<string name="calendar_fragment_title">Calendar</string>
	<string name="right_now">Right now:</string>
    <string name="in_break_for">In break for</string>
    <string name="start">Start:</string>
    <string name="estimated_end">Estimated end:</string>
    <string name="from_the">Since:</string>
    <string name="formatted_datetime">%s at %s</string>
    <string name="total_break_this_session">Break number:</string>
...
    <string name="action_view_as_list">View as a list</string>
    <string name="bottom_menu_home">Home</string>
    <string name="bottom_menu_calendar">Calendar</string>
    <string name="bottom_menu_settings">Settings</string>
    <string name="manual_mode_enabled">Manual mode enabled</string>
    <string name="manual_mode_disabled">Manual mode disabled</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="sun">SUN</string>
    <string name="manual_edit_icon">Manual edit icon</string>
    <string name="new_date">New date:</string>
    <string name="breaks">Breaks:</string>
    <string name="calculator_contraception_sperm_quantity_consult_specialist">Votre volume de sperme n\'est pas dans les normes, merci d\'aller consulter un spécialiste en cas de doute</string>
    <string name="calculator_contraception_100_safe">Your contraception is 100% safe</string>
    <string name="calculator_contraception_99_safe">Your contraception is 99% safe</string>
...
