appId: com.lubenard.oring_reminder
---
- tapOn: "New entry"
- assertVisible: "Right now:"
- assertVisible: "0h00mn"
- assertVisible: "Start break"
- assertVisible: "See my session"
