appId: com.lubenard.oring_reminder
---
- tapOn: "New entry"
- assertVisible: "Right now:"
- assertVisible: "No active session"
- assertVisible: "Since midnight, worn for:"
- assertVisible:
    text: "0h01mn"
    index: 0
- assertVisible: "In last 24h, you wore it during:"
- assertVisible:
    text: "0h01mn"
    index: 1
