appId: com.lubenard.oring_reminder
---
- tapOn: "New entry"
- assertVisible: "Right now:"
- assertVisible: "No active session"
